--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon app.js",
-    "start": "node -r app.js",
+    "start": "node app.js",
     "format": "prettier --config .prettierrc ./**/*.js --write"
   },
   "dependencies": {
@@ -25,5 +25,8 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
+  },
+  "engines": {
+    "node": "14.15.1"
   }
 }
