--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Ogbunike Jude",
   "license": "MIT",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon app.js",
     "start": "nodemon app.js",
     "format": "prettier --config .prettierrc ./**/*.js --write"
@@ -24,7 +25,9 @@
     "multer": "^1.4.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "eslint": "^7.19.0",
+    "nodemon": "^2.0.7",
+    "prettier": "2.2.1"
   },
   "engines": {
     "node": "14.15.1"
