--- a/package.json
+++ b/package.json
@@ -25,9 +25,13 @@
     "multer": "^1.4.2"
   },
   "devDependencies": {
-    "eslint": "^7.19.0",
+    "eslint": "^7.25.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.4.0",
     "nodemon": "^2.0.7",
-    "prettier": "2.2.1"
+    "prettier": "^2.2.1"
   },
   "engines": {
     "node": "14.15.1"
