--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"node app.js",
     "dev": "nodemon app.js",
-    "start": "nodemon app.js",
     "format": "prettier --config .prettierrc ./**/*.js --write"
   },
   "dependencies": {
